trying to fix css gaps in div classes?

--- a/style.css
+++ b/style.css
@@ -183,7 +183,7 @@ img {
     max-width: 100%;
     max-height: 89vh;
     display: block;
-    margin: 11px 0px 11px 0px;
+    margin: 11px 11px 11px 11px;
     background-color: transparent;
 }
 
